style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html { /* Needed to stop page from smooshing when on home page */
    scrollbar-gutter: stable;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    background-color: #f5f5f5;
    color: #111;
}

.main-container {
    width: 100%;
    padding-bottom: 40px;
}

.top-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 40px;
    padding-bottom: 100px;
}

.title-container {
    margin-bottom: 70px;
}

/* Title of webpage */
.main-title {
    font-size: 48px;
    letter-spacing: 25px;
    font-family: 'Brush Script MT'; /* experiment */
    font-weight: 150; /* I don't know if this does anything w/ Brush Script MT */
}

.tagline {
    font-size: 13px;
    letter-spacing: 4px;
    margin-top: 5px;
    color: #777;
    text-transform: lowercase;
    text-align: center;
}

/* Navbar Things */
.navbar-container {
    width: 100%;
}

.navbar {
    display: flex;
    justify-content: center;
    gap: 20%;
    list-style: none;
}

.navbar-list {
    position: relative;
    cursor: pointer;
    font-size: 14px;
    letter-spacing: 1px;
    text-transform: lowercase;
    padding-bottom: 5px;
}

/* Navbar Effects */

.navbar-list::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: 0;
    width: 0%;
    height: 2px;
    background-color: black;
    transition: width 0.3s ease;
}

.navbar-list:hover::after {
    width: 100%;
}

/* Removing underline and purple colour of links */
.navbar-list a,
.navbar-list a:visited,
.navbar-list a:active,
.navbar-list a:hover {
    text-decoration: none;
    color: black;
}

/* Content Container */
.content-container {
    display: flex;
    justify-content: center;
    align-items: center;

    width: 95%;
    margin: 0 auto;

    border: 1px solid #ddd;
    border-radius: 25px;
    background-color: #fff;
    padding: 40px;

    box-shadow: 0 4px 20px rgba(0,0,0,0.05);
}

/* Footer */
.footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    text-align: right;
    text-transform: lowercase;
    padding: 10px;
    font-size: 14px;
}

/* Home page only */

/* Short Gallery Section */

.short-gallery-wrapper {
    width: 100%;
    margin-bottom: 40px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.featured-image {
    width: 100%;
    min-width: 600px;
    height: auto;
    border-radius: 20px;
    object-fit: cover;
    margin-bottom: 15px;
}

/* Carousel */

.carousel-container {
    display: flex;
    gap: 15px;
    justify-content: center;
    margin-bottom: 50px;
}

.carousel-thumb {
    width: 80px;
    height: 80px;
    object-fit: cover;
    border-radius: 10px;
    cursor: pointer;
    opacity: 0.7;
    transition: all 0.2 ease;
}

.carousel-thumb:hover {
    opacity: 1;
    transform: scale(1.05);
}

/* Home Container */

.home-wrapper {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.home-container {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    gap: 40px;
    width: 100%;
}

/* about container */

.about-container {
    width: 50%;
}

.about-title {
    font-size: 36px;
    font-family: 'Brush Script MT';
    margin-bottom: 20px;
    letter-spacing: 18px;
    text-align: center;
}

.about-text {
    font-size: 16px;
    line-height: 1.6;
}

/* Portrait container */

.image-container {
    width: 50%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

.portrait-image {
    width: 100%;
    max-width: 300px;
    border-radius: 20px;
    object-fit: cover;
}

.portrait-name {
    text-align: center;
    margin-top: 10px;
    font-size: 36px;
    letter-spacing: 6px;
    font-family: "Brush Script MT";
    text-decoration: underline;
    text-decoration-thickness: 1px;
    text-underline-offset: 5px;
}

/* booking page only */
/* booking container */

.booking-container {
    width: 50%;
    display: flex;
    flex-direction: column;
}

.booking-info {
    padding-bottom: 60px;
}

.instagram-link {
    align-self: center;
}

.instagram-icon {
    max-width: 30px;
    max-height: 30px;
}

